--- a/_publications/CCIS2020.md
+++ b/_publications/CCIS2020.md
@@ -8,3 +8,4 @@ venue: ' Communications in Computer and Information Science book series (CCIS, v
 paperurl: 'http://mjkmoynihan.github.io/files/CCIS2020.pdf'
 ---
 
+[Download paper here](http://mjkmoynihan.github.io/files/CCIS.pdf)
