--- a/_publications/WACV2021.md
+++ b/_publications/WACV2021.md
@@ -6,7 +6,10 @@ excerpt: 'An autonomous system for tracking volumetric mesh sequences which supp
 date: 2021-01-01
 venue: 'Winter Conference on Applications of Computer Vision (WACV)'
 paperurl: 'http://mjkmoynihan.github.io/files/WACV2021.pdf'
+youtubeId: JwO2obk0tJM
 ---
+
+{% include youtubePlayer.html id=page.youtubeId %}
 
 As a rapidly growing medium, volumetric video is gaining attention beyond academia, reaching industry and creative communities alike. This brings new challenges to reduce the barrier to entry from a technical and economical point of view. We present a system for robustly and autonomously performing temporally coherent tracking for volumetric sequences, specifically targeting those from sparse setups or with noisy output. Our system will detect and recover missing pertinent geometry across highly incoherent sequences as well as provide users the option of propagating drastic topology edits. In this way, affordable multi-view setups can leverage temporal consistency to reduce processing and compression overheads while also generating more aesthetically pleasing volumetric sequences.
 
